# corelib

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  Todo.md
cmake/: options.cmake  set_build_type_defines.cmake
examples/: CMakeLists.txt  assert.cpp  auto_release.cpp  binder.cpp  callstack.cpp  hello.cpp  instrument.cpp  log.cpp  logger.cpp
include/: corelib.hpp  corelib_config.h  hello_corelib.hpp
include/corelib/: assert.hpp  auto_release.hpp  bind.hpp  callstack.hpp  def.hpp  hello.hpp  instrumentor.hpp  log.hpp  logger.hpp  memory.hpp  print.hpp  templates.hpp  typedef.hpp
include/corelib/internal/: __build_type__.h  __cxx_version__.h  internal.h  internal.hpp
src/: hello.cpp  hello_corelib.cpp
src/corelib/: callstack.cpp  instrumentor.cpp  log.cpp  templates.cpp
