cmake_minimum_required(VERSION 3.22)

project(
	corelib
	DESCRIPTION "My collection of stuff that i commonly use."
	VERSION 0.0.0.0
	LANGUAGES CXX
)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_C_STANDARD 23)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)

if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wunused -Wfatal-errors -Werror -pedantic")
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Wunused -Wfatal-errors -Werror -pedantic")
endif()

set(CORELIB_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(CORELIB_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)

file(GLOB_RECURSE CORELIB_SOURCES "${CORELIB_SOURCE_DIR}/*.cpp")
file(GLOB_RECURSE CORELIB_HEADERS "${CORELIB_INCLUDE_DIR}/*.hpp")

add_library(${PROJECT_NAME} SHARED ${CORELIB_SOURCES} ${CORELIB_HEADERS})
target_include_directories(${PROJECT_NAME} PUBLIC ${CORELIB_INCLUDE_DIR})

add_subdirectory(examples)
